# twimi

./: .gitignore  Cargo.toml  README.md  compose.yml  sqlx-data.json
.cargo/: config.toml
.github/workflows/: ci.yml
config/: config.toml
docs/: openapi.yml
migrations/: 20221107084957_init.sql  20221108055828_init.sql  20221119171328_init.sql
mysql/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
mysql/#innodb_redo/: #ib_redo9
mysql/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt  temp_9.ibt
mysql/mysql/: general_log_213.sdi  slow_log_214.sdi
mysql/performance_schema/: accounts_145.sdi  binary_log_trans_189.sdi  cond_instances_82.sdi  data_lock_waits_161.sdi  data_locks_160.sdi  error_log_83.sdi  events_errors_su_139.sdi  events_errors_su_140.sdi  events_errors_su_141.sdi  events_errors_su_142.sdi  events_errors_su_143.sdi  events_stages_cu_111.sdi  events_stages_hi_112.sdi  events_stages_hi_113.sdi  events_stages_su_114.sdi  events_stages_su_115.sdi  events_stages_su_116.sdi  events_stages_su_117.sdi  events_stages_su_118.sdi  events_statement_119.sdi  events_statement_120.sdi  events_statement_121.sdi  events_statement_122.sdi  events_statement_123.sdi  events_statement_124.sdi  events_statement_125.sdi  events_statement_126.sdi  events_statement_127.sdi  events_statement_128.sdi  events_statement_129.sdi  events_statement_130.sdi  events_transacti_131.sdi  events_transacti_132.sdi  events_transacti_133.sdi  events_transacti_134.sdi  events_transacti_135.sdi  events_transacti_136.sdi  events_transacti_137.sdi  events_transacti_138.sdi  events_waits_cur_84.sdi  (+70 more)
mysql/sys/: sys_config.ibd
scripts/: init_mysql.sh
src/: lib.rs  main.rs  startup.rs
src/app/: startup.rs
src/app/routes/: health_check.rs  signup.rs
src/domain/: mod.rs  user.rs
src/repositories/: health_check.rs  mod.rs  users.rs
src/repositories/models/: kaiin.rs  mod.rs
src/routes/: health_check.rs  mod.rs  signup.rs
src/usecases/: health_check.rs  mod.rs  signup.rs
src/usecases/models/: mod.rs  users.rs
tests/api/: health_check.rs  helpers.rs
twimi-app/: Cargo.toml
twimi-app/src/: lib.rs  startup.rs
twimi-app/src/infrastructure/: mod.rs
twimi-app/src/infrastructure/models/: kaiin.rs  mod.rs  users.rs
twimi-app/src/infrastructure/repositories/: health_check.rs  users.rs
twimi-app/src/infrastructure/services/: database.rs  jwt.rs  mod.rs  password.rs
twimi-app/src/routes/: health_check.rs  login.rs  mod.rs  signup.rs
twimi-app/src/server/: middleware.rs  mod.rs  startup.rs
twimi-app/src/server/models/: mod.rs  user.rs
twimi-app/src/server/models/user/: mod.rs  user_id.rs  username.rs
twimi-app/src/server/routes/: health_check.rs  login.rs  mod.rs  signup.rs
twimi-app/src/server/routes/user/: get.rs  mod.rs  patch.rs
twimi-app/tests/api/: helpers.rs
twimi-core/: Cargo.toml
twimi-core/src/: lib.rs
twimi-core/src/domain/models/: mod.rs  user.rs
twimi-core/src/domain/models/user/: email.rs  mod.rs  password.rs  username.rs
twimi-core/src/domain/repositories/: health_check.rs  mod.rs  users.rs
twimi-core/src/domain/services/: jwt.rs  mod.rs  password.rs
twimi-core/src/infrastructure/: mod.rs
twimi-core/src/infrastructure/models/: kaiin.rs  mod.rs
twimi-core/src/infrastructure/repositories/: health_check.rs  users.rs
twimi-core/src/usecases/: health_check.rs  login.rs  mod.rs  signup.rs
twimi-core/src/usecases/user/: get.rs  patch.rs
