[package]
name = "twimi"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
async-trait = "0.1.58"
shaku = "0.6.1"
shaku_actix = "0.2.0"
sqlx = { version = "0.6.2", default-features = false, features = ["runtime-actix-rustls", "mysql", "macros", "offline"] }
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
reqwest = "0.11.12"
