[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"

[workspace]
members = [
    "twimi-app",
    "twimi-core",
]

[workspace.dependencies]
anyhow = "1.0.66"
async-trait = "0.1.58"
serde = { version = "1.0.147", features = ["derive"] }
shaku = "0.6.1"
thiserror = "1.0.37"
time = { version = "0.3.17", features = ["serde"] }

