[package]
name = "twimi-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "twimi-app"
path = "src/bin/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
actix-settings = "0.6.0"
actix-web = "4.2.1"
actix-web-lab = "0.18.5"
argon2 = { version = "0.4.1", features = ["std"] }
jsonwebtoken = "8.1.1"
shaku_actix = "0.2.0"
sqlx = { version = "0.6.2", default-features = false, features = [
    "runtime-actix-rustls",
    "mysql",
    "macros",
    "offline",
    "time",
] }
rand = "0.8.5"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }

twimi-core = { path = "../twimi-core" }

anyhow.workspace = true
shaku.workspace = true
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
time.workspace = true

[dev-dependencies]
reqwest = "0.11.12"
