[package]
name = "twimi-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.58"
shaku = "0.6.1"
unicode-segmentation = "1.10.0"
validator = "0.16.0"

anyhow.workspace = true
serde.workspace = true
thiserror.workspace = true
time.workspace = true
